Updates: - Upgrade logic to get data from adapters - Upgrade logic to access semantic data - Endpoint to send sparql to remote nodes within a same organisation Fixes: - General clean up and code revision
