# src/api/main/routes.ts
@@ -8,7 +8,7 @@
  * @interface
  */
 // Express router
-import { Router } from 'express'
+import { Router, json, text } from 'express'
 // Controllers
 import { auth, registry, collaborate, discovery, consume, admin } from './controllers' 
  
@@ -16,56 +16,57 @@ const MainRouter = Router()
 
 MainRouter
   // ***** AUTH endpoints *****
-   .get('/login', auth.login)
-   .get('/login/:id', auth.login)
-   .get('/logout', auth.logout)
-   .get('/logout/:id', auth.logout)
+   .get('/login', json(), auth.login)
+   .get('/login/:id', json(), auth.login)
+   .get('/logout', json(), auth.logout)
+   .get('/logout/:id', json(), auth.logout)
 
    // ***** REGISTRY endpoints *****
-   .get('/registration', registry.getRegistrations)
-   .get('/registration/:id', registry.getRegistrationsInfo)
-   .post('/registration', registry.postRegistrations)
-   .put('/registration', registry.modifyRegistration)
-   .post('/registration/remove', registry.removeRegistrations)
+   .get('/registration', json(), registry.getRegistrations)
+   .get('/registration/:id', json(), registry.getRegistrationsInfo)
+   .post('/registration', json(), registry.postRegistrations)
+   .put('/registration', json(), registry.modifyRegistration)
+   .post('/registration/remove', json(), registry.removeRegistrations)
 
   // ***** DISCOVERY endpoints *****
   // LOCAL
-   .get('/discovery/local/neighbours', discovery.discoveryLocal)
-   .get('/discovery/local/neighbours/:id', discovery.discoveryLocal)
-   .get('/discovery/local/td/:id', discovery.discoverLocalTd)
-   .post('/discovery/local/semantic', discovery.discoverLocalSemantic) 
+   .get('/discovery/local/neighbours', json(), discovery.discoveryLocal)
+   .get('/discovery/local/neighbours/:id', json(), discovery.discoveryLocal)
+   .get('/discovery/local/td/:id', json(), discovery.discoverLocalTd)
+   .post('/discovery/local/semantic', text(), discovery.discoverLocalSemantic) // Expects plain text
   // REMOTE
-   .post('/discovery/remote/td/:id/:originId', discovery.discoveryRemote)
+   .get('/discovery/remote/td/:id/:originId', json(), discovery.discoveryRemote)
+   .post('/discovery/remote/semantic/:id', text(), discovery.discoveryRemote)
   // TBD .post('/discovery/semantic/:agid', ctrl.discoveryRemote)
   // TBD discover neighbours from specific CID or CTID
   // TBD Federate sparql query
 
   // ***** CONSUME remote resources *****
-   .get('/properties/:id/:oid/:pid', consume.getProperty) // Request remote property
-   .put('/properties/:id/:oid/:pid', consume.setProperty) // Update remote property
+   .get('/properties/:id/:oid/:pid', json(), consume.getProperty) // Request remote property
+   .put('/properties/:id/:oid/:pid', json(), consume.setProperty) // Update remote property
    // .get('/actions/:id/:oid/:aid/:tid') // Get action status
    // .post('/actions/:id/:oid/:aid') // Start task on remote action
    // .put('/actions/:id/:oid/:aid') // Update status of task
    // .delete('/actions/:id/:oid/:aid/:tid') // Stop task
-   .post('/events/local/:id/:eid', consume.activateEventChannel) // Create my event channel
-   .put('/events/local/:id/:eid', consume.publishEvent) // Put a message in my event channel
-   .delete('/events/local/:id/:eid', consume.deactivateEventChannel) // Delete my event channel
-   .get('/events/remote/:id/:oid/:eid', consume.statusRemoteEventChannel) // Get status of a remote event channel
-   .post('/events/remote/:id/:oid/:eid', consume.subscribeRemoteEventChannel) // Subscribe to remote event channel
-   .delete('/events/remote/:id/:oid/:eid', consume.unsubscribeRemoteEventChannel) // Unsubscribe to remote event channel
+   .post('/events/local/:id/:eid', json(), consume.activateEventChannel) // Create my event channel
+   .put('/events/local/:id/:eid', json(), consume.publishEvent) // Put a message in my event channel
+   .delete('/events/local/:id/:eid', json(), consume.deactivateEventChannel) // Delete my event channel
+   .get('/events/remote/:id/:oid/:eid', json(), consume.statusRemoteEventChannel) // Get status of a remote event channel
+   .post('/events/remote/:id/:oid/:eid', json(), consume.subscribeRemoteEventChannel) // Subscribe to remote event channel
+   .delete('/events/remote/:id/:oid/:eid', json(), consume.unsubscribeRemoteEventChannel) // Unsubscribe to remote event channel
   //  .get('/events/subscribe', ctrl.eventsSubscribeAll)
   //  .delete('/events/subscribe',ctrl.eventsUnsubscribeAll)
 
   // ***** COLLABORATION endpoints *****
-  .get('/collaboration/partners/', collaborate.getPartners)
-  .get('/collaboration/partners/:cid', collaborate.getPartnerInfo)
-  .get('/collaboration/contracts/:cid', collaborate.getContract)
-  // .delete('/collaboration/contracts/:cid', collaborate.delContract)
+  .get('/collaboration/partners/', json(), collaborate.getPartners)
+  .get('/collaboration/partners/:cid', json(), collaborate.getPartnerInfo)
+  .get('/collaboration/contracts/:cid', json(), collaborate.getContract)
+  // .delete('/collaboration/contracts/:cid', json(), collaborate.delContract)
 
   // ***** ADMIN endpoints *****
-  .get('/agent/info', admin.getConfiguration)
-  .get('/agent/imports', admin.importFiles)
-  .get('/agent/exports', admin.exportFiles)
-  .get('/agent/healthcheck', admin.healthCheck)
+  .get('/agent/info', json(), admin.getConfiguration)
+  .get('/agent/imports', json(), admin.importFiles)
+  .get('/agent/exports', json(), admin.exportFiles)
+  .get('/agent/healthcheck', json(), admin.healthCheck)
 
 export { MainRouter }
